# ipp-crypto

./: .buildinfo  .clang-format  .gitattributes  .gitignore  BUILD.md  CHANGELOG.MD  CHANGELOG.md  CMakeLists.txt  CONST_TIME_EXECUTION_TESTING.md  CONTRIBUTING.md  DEPRECATION_NOTES.md  LICENSE  OVERVIEW.md  README.md  README_FIPS.md  SUPPORT.md  THIRD-PARTY-PROGRAMS.txt  add_bn.html  aes-ccm-functions.html  aes-gcm-functions.html  aes-siv-functions.html  aes-xts-functions.html  aes_ccmdecrypt.html  aes_ccmencrypt.html  aes_ccmgetsize.html  aes_ccmgettag.html  aes_ccminit.html  aes_ccmmessagelen.html  aes_ccmstart.html  aes_ccmtaglen.html  aes_cmacfinal.html  aes_cmacgetsize.html  aes_cmacgettag.html  aes_cmacinit.html  aes_cmacupdate.html  aes_encryptcfb16_mb.html  aes_gcmdecrypt.html  aes_gcmencrypt.html  aes_gcmgetsize.html  aes_gcmgettag.html  (+490 more)
sources/ippcp/: CMakeLists.txt  aes_cfb_aesni_mb.h  aes_cfb_aesni_mb4.c  aes_cfb_vaes_mb.h  aes_cfb_vaes_mb16.c  aes_cfb_vaes_mb4.c  aes_cfb_vaes_mb8.c  aes_gcm_avx512.h  aes_gcm_avx512_structures.h  aes_gcm_vaes.h  aes_keyexp.h  cpinit.c  emptyfile.c  exports.linux.lib-export  exports.linux.libLd-export  exports.linux.selftests-export  exports.macosx.lib-export  exports.macosx.libLd-export  exports.macosx.selftests-export  gsmod_almmontinv.c  gsmod_almmontinv_ct.c  gsmod_enginegetsize.c  gsmod_engineinit.c  gsmod_getpool.c  gsmod_inv.c  gsmod_montfactor.c  gsmod_montinv.c  gsmod_packctx.c  gsmod_unpackctx.c  gsmodmethod.c  gsmodmethod.h  gsmodmethod_dlp.c  gsmodmethod_gfp.c  gsmodmethod_mont.c  gsmodmethod_rsa.c  gsmodmethodstuff.h  gsmodstuff.h  gsscramble.c  gsscramble.h  gsscramble_sscm.c  (+916 more)
sources/ippcp/asm_ia32/: cpinitas.asm  emulator.inc  pcpaesgcmg9as.asm  pcpaesgcmtable2kv8as.asm  pcpbnu.inc  pcpbnuaddaddw7as.asm  pcpbnuaddsubw7as.asm  pcpbnuaddw7as.asm  pcpbnuincw7as.asm  pcpbnumuldgtw7as.asm  pcpbnumulschoolv8as.asm  pcpbnusqrw7as.asm  pcpbnusubw7as.asm  pcpdelay.asm  pcpgcmmulg9as.asm  pcpgcmreducev8as.asm  pcpgcmreducew7as.asm  pcpmd5w7as.asm  pcpmontreductionv8as.asm  pcpmontreductionw7as.asm  pcpmontreductw7as.asm  pcpmulbnuw7as.asm  pcpp192r1arith_mont_slm.asm  pcpp224r1arith_mont_slm.asm  pcpp256r1arith_mont_slm.asm  pcpp384r1arith_mont_slm.asm  pcpp521r1arith_mont_slm.asm  pcppurgeblkw7as.asm  pcprc4v8as.asm  pcprc4w7as.asm  pcprij128ccmg9as.asm  pcprij128cmacg9as.asm  pcprij128decryptcbcpipeg9as.asm  pcprij128decryptcfbpipeg9as.asm  pcprij128decryptecbpipeg9as.asm  pcprij128decryptg9as.asm  pcprij128decryptxtsg9as.asm  pcprij128encryptcbcg9as.asm  pcprij128encryptcfbg9as.asm  pcprij128encryptctrpipeg9as.asm  (+20 more)
sources/ippcp/asm_intel64/: aes_common.inc  aes_keyexp_128.asm  aes_keyexp_192.asm  aes_keyexp_256.asm  clear_regs.inc  cpinitas.asm  emulator.inc  gcm128_api_vaes_avx512.asm  gcm128_avx512.asm  gcm128_vaes_avx512.asm  gcm192_api_vaes_avx512.asm  gcm192_avx512.asm  gcm192_vaes_avx512.asm  gcm256_api_vaes_avx512.asm  gcm256_avx512.asm  gcm256_vaes_avx512.asm  gcm_api_vaes_avx512.inc  gcm_avx512.inc  gcm_defines.inc  gcm_ippcp_api_vaes_avx512.inc  gcm_keys_avx512.inc  gcm_keys_vaes_avx512.inc  gcm_vaes_avx512.inc  ia_32e_regs.inc  memcpy.inc  os.inc  pcpaesgcme9as.asm  pcpaesgcmtable2ku8as.asm  pcpbnuaddaddm7as.asm  pcpbnuaddm7as.asm  pcpbnuaddsubm7as.asm  pcpbnudivm7as.asm  pcpbnuincm7as.asm  pcpbnum7.inc  pcpbnumaconem7as.asm  pcpbnumul.inc  pcpbnumul_basic.inc  pcpbnumul_fix.inc  pcpbnumulpp.inc  pcpbnumulpp_basic.inc  (+68 more)
sources/ippcp/crypto_mb/: CMakeLists.txt  Readme.md
sources/ippcp/crypto_mb/src/: CMakeLists.txt
sources/ippcp/ecnist/: ifma_alias_avx512.h  ifma_alias_avx512vl.h  ifma_arith_method.h  ifma_arith_method_n256.c  ifma_arith_method_n384.c  ifma_arith_method_n521.c  ifma_arith_method_p256.c  ifma_arith_method_p384.c  ifma_arith_method_p521.c  ifma_arith_method_p521.h  ifma_arith_n256.c  ifma_arith_n256.h  ifma_arith_n384.c  ifma_arith_n384.h  ifma_arith_n521.c  ifma_arith_n521.h  ifma_arith_p256.c  ifma_arith_p256.h  ifma_arith_p384.c  ifma_arith_p384.h  ifma_arith_p521.c  ifma_arith_p521.h  ifma_defs.h  ifma_defs_p521.h  ifma_ec_addpoint_p256.c  ifma_ec_addpoint_p384.c  ifma_ec_addpoint_p521.c  ifma_ec_dh_p256.c  ifma_ec_dh_p384.c  ifma_ec_dh_p521.c  ifma_ec_dsasign_p256.c  ifma_ec_dsasign_p384.c  ifma_ec_dsasign_p521.c  ifma_ec_dsaverify_p256.c  ifma_ec_dsaverify_p384.c  ifma_ec_dsaverify_p521.c  ifma_ec_mulpoint_p256.c  ifma_ec_mulpoint_p384.c  ifma_ec_mulpoint_p521.c  ifma_ec_on_curve_p256.c  (+17 more)
sources/ippcp/fips_cert/: common.c  selftest_aes_enc_dec_cbc.c  selftest_aes_enc_dec_cbc_cs.c  selftest_aes_enc_dec_ccm.c  selftest_aes_enc_dec_cfb.c  selftest_aes_enc_dec_ctr.c  selftest_aes_enc_dec_gcm.c  selftest_aes_enc_dec_ofb.c  selftest_aes_enc_dec_xts.c  selftest_aes_upd_cmac.c  selftest_aes_upd_hmac.c  selftest_ecdsa_shared_secret.c  selftest_ecdsa_sign_verify.c  selftest_hash_msg_upd_sha.c  selftest_rsa_enc_dec_oaep.c  selftest_rsa_sign_verify_pkcs_v15.c  selftest_rsa_sign_verify_pss.c
sources/ippcp/ifma_rsa_mb/: CMakeLists.txt  ifma_sources_generation.cmake
sources/ippcp/ifma_rsa_mb/src/: CMakeLists.txt  div_104_by_52.c  ifma_arith52x_mb8.c  ifma_cp_rsa52_layer_mb8.c  ifma_cp_rsa52_mb8.c  ifma_cvt52.c  ifma_exp52x10_mb8.c  (+17 more)
sources/ippcp/sm2/: ifma_arith_method_nsm2.c  ifma_arith_method_psm2.c  ifma_arith_method_sm2.h  ifma_arith_nsm2.c  ifma_arith_nsm2.h  ifma_arith_psm2.c  ifma_arith_psm2.h  ifma_defs_sm2.h  ifma_ec_addpoint_sm2.c  ifma_ec_dh_sm2.c  ifma_ec_mulpoint_sm2.c  ifma_ec_on_curve_sm2.c  ifma_ec_pubkey_sm2.c  ifma_ec_sign_sm2.c  ifma_ec_verify_sm2.c  ifma_ecpoint_sm2.c  ifma_ecpoint_sm2.h  ifma_ecprecomp7_sm2.h  ifma_sm2_key_exchange_shared_key.c  sm2_decrypt_ext.c  sm2_decrypt_ext_dec_msg_size.c  sm2_encrypt_ext.c  sm2_encrypt_ext_enc_msg_size.c  sm2_key_exchange_confirmation.c  sm2_key_exchange_get_size.c  sm2_key_exchange_init.c  sm2_key_exchange_method.h  sm2_key_exchange_setup.c  sm2_key_exchange_shared_key.c  sm2_message_representation.c  sm2_stuff.c  sm2_stuff.h  sm2_user_id_hash.c
sources/ippcp/xmss/: wots_internal.c  xmss_internal.c  xmss_setters_getters.c  xmss_verify.c
(+2732 files in other folders)
